[bug 570425] Fix line breaks on contributor forum

--- a/kitsune/sumo/static/less/forums.less
+++ b/kitsune/sumo/static/less/forums.less
@@ -158,6 +158,8 @@
       padding: 30px;
 
       p {
+        white-space: pre-wrap;
+
         &:first-of-type {
           margin-top: 0;
         }
